# someFlaskStuff

./: pyproject.toml
instance/: database.sqlite
src/: app.py  db.py  schema.sql
src/controller/: user.py
